# HydraSim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: CFD_DIGITAL_TWIN_ROADMAP.md  CUSTOM_SCENARIO_TEMPLATE.json  HYDRASIM_TODAY_BEFORE_AFTER.md  IMPLEMENTATION_PROCESS.md  INDUSTRIAL_SIMULATOR_ROADMAP.md  MODBUS_INTERFACE.md  MODEL_SCOPE.md  MVP_MODBUS_SCENARIOS.md  QUALITY_BASELINE.md  REFERENCE_WATER_PLANT.md  SCENARIO_RUNTIME.md  SLICE_ROADMAP.md
src/wt_simulator/: __main__.py
src/wt_simulator/actuators/: __init__.py  base_actuator.py  control_valve.py  dosing_pump.py  valve_characteristics.py
src/wt_simulator/core/: reactor.py
src/wt_simulator/hydraulics/: __init__.py
src/wt_simulator/hydraulics/cfd/: __init__.py  area_models.py  boundary_conditions.py  calibration_evidence.py  controller_coupling.py  device_coupling.py  digital_twin.py  export.py  fields.py  mesh.py  numerics.py  operator_semantics.py  performance.py  scalar.py  solver.py  supervisory.py  turbulence.py  unit_processes.py  verification.py
src/wt_simulator/ics/: __init__.py  bundle.py  catalog.py  cli.py  control.py  models.py  orchestration.py  pcap.py  process_truth.py  profile_data.py  profiles.py  release.py  render.py  runtime.py  scenario_base.py  scenario_data.py  scenario_faults.py  scenario_review.py  scenario_startup.py  scenarios.py  validator.py
src/wt_simulator/maintenance/: __init__.py  maintenance_manager.py
src/wt_simulator/modbus/: README.md  __init__.py  register_map.py  slave.py
src/wt_simulator/scenarios/: __init__.py  bundle.py  executor.py  live.py  loader.py  models.py  mvp_modbus.py  pcap.py  profile_common.py  profile_expanded.py  profile_primary.py  profile_topology.py  profiles.py  render.py  run.py  validate.py  validator.py
src/wt_simulator/sensors/: README.md  __init__.py  base_sensor.py  chlorine_sensor.py  flow_sensor.py  ph_sensor.py
tests/: test_cfd_calibration_evidence.py  test_cfd_coupling.py  test_cfd_digital_twin.py  test_cfd_external_review_gate.py  test_cfd_operator_semantics.py  test_cfd_performance_gate.py  test_cfd_validation_gate.py  test_cfd_verification.py  test_ics_release_candidate.py  test_ics_runtime.py  test_modbus_e2e.py  test_modbus_protocol_and_map.py  test_mvp_modbus_scenarios.py  test_reactor_realism.py
tools/: check_project_quality.py  quality_ics.py
(+7 files in other folders)
