[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "water-treatment-sim"
version = "1.1.0"
description = "Multi-zone water treatment simulator with reactor physics, sensors, actuators, and Modbus TCP integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Guilherme F. G. Santos" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
]

[project.optional-dependencies]
modbus = [
    "pymodbus>=3.11,<4",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
wts-sim = "wt_simulator.__main__:main"
wts-mvp-modbus-scenario = "wt_simulator.scenarios.mvp_modbus:main"
wts-run-scenario = "wt_simulator.scenarios.run:main"
wts-validate-scenario = "wt_simulator.scenarios.validate:main"
wts-export-lab-bundle = "wt_simulator.scenarios.bundle:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
